syntax = "proto3";

package xla.ifrt;

// Wire format for objects serialized from `Serializable`.
message Serialized {
  string type_name = 1;
  bytes data = 2;
}
